...
    <string name="get_height">Height:</string>
    <string name="calculate">Calculate!</string>
    <string name="your_bmi">Your BMI is:</string>
    <string name="kg_switch" translatable="false">kg/lb  </string>
    <string name="imperial_mass">enter lb</string>
    <string name="imperial_height">enter in</string>
    <string name="input_err">wrong input</string>
    <string name="severe_underweight">Severely underweight, You should immediately contact a specialist!</string>
    <string name="underweight">Underweight, You should probably see a specialist in a nearest time</string>
    <string name="normal">"Normal, Nothing to worry about, according to your BMI index everything is just fine</string>
    <string name="overweight">Overweight, You should start to worry, you have just become overweight</string>
    <string name="moderately_obese">Moderately obese, You should probably see a specialist in a nearest time</string>
    <string name="severely_obese">Severely obese, You should contact a specialist!</string>
    <string name="very_severely_obese">Very severely obese, You should immediately contact a specialist!</string>
    <string name="about">About author:</string>
    <string name="about_text">Hello, my name is Kamil, I am Computer Science student. I hope you enjoy my app ;)</string>
...
